force-app/main/default/objects/Email_Template_Keyword__mdt/Email_Template_Keyword__mdt.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This is use to show list of keyword where ops user create email template.</description>
    <label>Email Template Keyword</label>
    <pluralLabel>Email Template Keywords</pluralLabel>
</CustomObject>