force-app/main/default/objects/Email_Template_Keyword__mdt/fields/Do_Not_Show_To_Users__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Show_To_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Show To Users</label>
    <type>Checkbox</type>
</CustomField>