force-app/main/default/objects/Email_Template_Keyword__mdt/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Badges</fullName>
                <default>true</default>
                <label>Badges</label>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Manuals</fullName>
            </value>
            <value>
                <fullName>Stand Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>