force-app/main/default/objects/Email_Template_Keyword__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>