force-app/main/default/objects/Email_Template_Keyword__mdt/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>