force-app/main/default/objects/Email_Template_Keyword__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Group_Name__c</columns>
    <columns>Keyword__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Prefix__c</columns>
    <columns>Do_Not_Show_To_Users__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>