force-app/main/default/objects/Email_Template_Keyword__mdt/listViews/Stand_Contractor.listView-meta.xml
<ListView>
    <fullName>Stand_Contractor</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Keyword__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Prefix__c</columns>
    <columns>Do_Not_Show_To_Users__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Name__c</field>
        <operation>equals</operation>
        <value>Stand Contractor</value>
    </filters>
    <label>Stand Contractor</label>
    <language>en_US</language>
</ListView>